--- a/snake.html
+++ b/snake.html
@@ -152,6 +152,12 @@
 
         // --- WICHTIG: HIER WIEDER DEINE CONFIG EINFÜGEN! ---
         const firebaseConfig = {
+            apiKey: "AIzaSyASbziojAan2xJ3EoJ0RDPa9jh1Z-5UGX0",
+            authDomain: "mba-arcade.firebaseapp.com",
+            projectId: "mba-arcade",
+            storageBucket: "mba-arcade.firebasestorage.app",
+            messagingSenderId: "497628563783",
+            appId: "1:497628563783:web:a6a0a272fb97b60bbf6462"
             // ... dein Code ...
         };
 
