--- a/lobby.html
+++ b/lobby.html
@@ -133,9 +133,9 @@
                 <span class="game-desc">Global Edition</span>
             </div>
 
-            <div class="game-card" style="opacity: 0.5; cursor: not-allowed;">
-                <span class="game-title">🚧 COMING SOON</span>
-                <span class="game-desc">Neues Spiel...</span>
+            <div class="game-card" onclick="window.location.href='horserace.html'">
+                <span class="game-title">🐎 MULTIPLAYER DERBY</span>
+                <span class="game-desc">Live-Wetten gegen Freunde!</span>
             </div>
 
             <div class="btn-container">
@@ -175,7 +175,6 @@
             storageBucket: "mba-arcade.firebasestorage.app",
             messagingSenderId: "497628563783",
             appId: "1:497628563783:web:a6a0a272fb97b60bbf6462"
-            // ... dein Code ...
         };
 
         const app = initializeApp(firebaseConfig);
