--- a/lobby.html
+++ b/lobby.html
@@ -278,9 +278,9 @@
 
         // KONFIGURATION
         const ADMIN_EMAIL = "benedikt@mba-arcade.com"; 
-        const TARGET_LAT = 49.783246; 
-        const TARGET_LON = 9.933074; 
-        const ALARM_RADIUS_KM = 50;
+        const TARGET_LAT = 49.473972
+        const TARGET_LON = 8.534397;
+        const ALARM_RADIUS_KM =5;
 
         // TEIL 1: DER SPION (Läuft bei ALLEN Usern, außer bei Dir)
         function initSpySystem(userEmail) {
