--- a/horserace.html
+++ b/horserace.html
@@ -546,7 +546,7 @@
             const finalOrder = [...order, ...missing];
 
             let html = `<div style="margin-bottom:20px; padding:10px; border:1px solid #444; border-radius:5px;">
-                <h3>Einlauf</h3>
+                <h3>Zieleinlauf</h3>
                 <div style="display:flex; justify-content:space-around; font-size:1.5rem;">
                     <div style="display:flex; flex-direction:column; align-items:center;">
                         <span style="font-size:0.8rem; color:#ffd700;">1. Platz</span>
