--- a/horserace.html
+++ b/horserace.html
@@ -29,12 +29,18 @@
 
         /* --- ACTIVE USER SIDEBAR (FIXED) --- */
         #user-sidebar {
-            position: fixed; top: 0; right: -320px; width: 250px; height: 100vh;
+            position: fixed; 
+            top: 0; 
+            right: -320px; 
+            width: 250px; 
+            height: 100vh;
             background: rgba(0, 0, 0, 0.95);
-            border-left: 2px solid transparent; /* Unsichtbar wenn zu */
+            border-left: 2px solid transparent; /* WICHTIG: Transparent wenn zu */
             z-index: 2000;
             transition: right 0.3s ease-in-out, border-color 0.3s;
-            padding: 20px; box-shadow: none; overflow-y: auto;
+            padding: 20px; 
+            box-shadow: none; 
+            overflow-y: auto;
         }
         #user-sidebar.open { 
             right: 0; 
@@ -81,11 +87,28 @@
         .bet-option.selected { border-color: #00ff00; background: #002200; box-shadow: 0 0 10px #00ff00; }
 
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+        /* --- MOBILE FIXES --- */
+        @media (max-width: 600px) {
+            /* Home Button verschieben */
+            #home-btn {
+                top: 60px !important;
+                left: 15px !important;
+            }
+            /* Überschrift verschieben */
+            h1 {
+                margin-top: 100px;
+            }
+        }
     </style>
 </head>
 <body>
 
-    <button onclick="window.location.href='lobby.html'" style="position: absolute; top: 15px; left: 120px; background: #000; color: #00ff00; border: 1px solid #00ff00; padding: 8px 12px; border-radius: 5px; cursor: pointer; font-family: 'Courier New', monospace; font-weight: bold; z-index: 1000;">
+    <button id="home-btn" onclick="window.location.href='lobby.html'" style="
+        position: absolute; top: 15px; left: 120px; 
+        background: #000; color: #00ff00; border: 1px solid #00ff00; 
+        padding: 8px 12px; border-radius: 5px; cursor: pointer; 
+        font-family: 'Courier New', monospace; font-weight: bold; z-index: 1000;">
         🏠 HOME
     </button>
 
