--- a/lobby.html
+++ b/lobby.html
@@ -22,6 +22,12 @@
         }
 
         h1 { color: #00ff00; text-shadow: 0 0 10px rgba(0,255,0,0.5); margin-bottom: 10px; text-align: center; }
+        /* --- MOBILE FIX FÜR ÜBERSCHRIFT --- */
+        @media (max-width: 600px) {
+            h1 {
+                margin-top: 60px; /* Schiebt die Überschrift unter den Online-Badge */
+            }
+        }
         
         /* --- STATUS ANZEIGE (JETZT LINKS) --- */
         #status-display {
