--- a/lobby.html
+++ b/lobby.html
@@ -214,6 +214,11 @@
                 <span class="game-title">🐎 MULTIPLAYER DERBY</span>
                 <span class="game-desc">Live-Wetten gegen Freunde!</span>
             </div>
+            
+            <div class="game-card" onclick="window.location.href='mario.html'">
+                <span class="game-title">🍄 SUPER MBA BROS</span>
+                <span class="game-desc">Jump & Run Challenge</span>
+            </div>
 
             <div class="btn-container">
                 <button class="btn-action" onclick="switchView('profile')">⚙️ PROFIL BEARBEITEN</button>
