--- a/lobby.html
+++ b/lobby.html
@@ -214,10 +214,20 @@
                 <span class="game-title">🐎 MULTIPLAYER DERBY</span>
                 <span class="game-desc">Live-Wetten gegen Freunde!</span>
             </div>
-            
+
             <div class="game-card" onclick="window.location.href='mario.html'">
                 <span class="game-title">🍄 SUPER MBA BROS</span>
                 <span class="game-desc">Jump & Run Challenge</span>
+            </div>
+
+            <div class="game-card" style="opacity: 0.6; cursor: default; border-color: #666;">
+                <span class="game-title">🚌 BUSFAHRER</span>
+                <span class="game-desc">COMING SOON</span>
+            </div>
+
+            <div class="game-card" style="opacity: 0.6; cursor: default; border-color: #666;">
+                <span class="game-title">🃏 FUCK THE DEALER</span>
+                <span class="game-desc">COMING SOON</span>
             </div>
 
             <div class="btn-container">
