--- a/lobby.html
+++ b/lobby.html
@@ -220,9 +220,9 @@
                 <span class="game-desc">Jump & Run Challenge</span>
             </div>
 
-            <div class="game-card" style="opacity: 0.6; cursor: default; border-color: #666;">
+            <div class="game-card" onclick="window.location.href='busfahrer.html'">
                 <span class="game-title">🚌 BUSFAHRER</span>
-                <span class="game-desc">COMING SOON</span>
+                <span class="game-desc">Trinkspiel-Legende</span>
             </div>
 
             <div class="game-card" style="opacity: 0.6; cursor: default; border-color: #666;">
